# oysterpack-near-stake-token

./: .gitignore  DEV.md  LICENSE  README.md  package.json
contract/: .gitignore  Cargo.toml  DEV.md  README.md  build.sh  compile  features.md  testing.md  workspace.md
contract/docs/: near-rust-sdk.md  notes.md
contract/docs/testnet/: account-management.md  account_storage.md  contract_owner.md  demo.md  deployment.md  fungible-token.md  operator.md  staking-service.md  vault-fungible-token.md
contract/ft-transfer-receiver-mock/: Cargo.toml  README.md  build.sh
contract/ft-transfer-receiver-mock/src/: lib.rs
contract/scripts/: near-tx-status.sh
contract/src/: account.rs  accounts.rs  collections.rs  common.rs  config.rs  contract.rs  core.rs  data.rs  domain.rs  errors.rs  events.rs  hash.rs  interface.rs  lib.rs  near.rs  stake.rs  staking.rs  state.rs  storage_keys.rs  test_utils.rs
contract/src/contract/: account_management.rs  account_registry.rs  account_storage.rs  contract_owner.rs  financials.rs  fungible_token.rs  metadata.rs  operator.rs  redeeming_workflow_callbacks.rs  settings.rs  staking_pool.rs  staking_service.rs  staking_service_callbacks.rs  staking_workflow_callbacks.rs  vault_fungible_token.rs
contract/src/core/: hash.rs  mixed_fraction.rs
contract/src/data/: accounts.rs  activities.rs  config.rs  staking_pools.rs
contract/src/domain/: account.rs  accounts.rs  batch_claim_ticket.rs  batch_id.rs  block_height.rs  block_time_height.rs  block_timestamp.rs  epoch_height.rs  gas.rs  lock.rs  redeem_stake_batch.rs  redeem_stake_batch_receipt.rs  stake_batch.rs  stake_batch_receipt.rs  stake_token_value.rs  staking_pool.rs  storage_usage.rs  timestamped_near_balance.rs  timestamped_stake_balance.rs  unstake_batch.rs  vault.rs  yocto_near.rs  yocto_stake.rs
contract/src/interface/: account_management.rs  account_registry.rs  account_storage.rs  contract_owner.rs  financials.rs  fungible_token.rs  metadata.rs  model.rs  operator.rs  staking_service.rs  vault_fungible_token.rs
contract/src/interface/model/: batch_id.rs  block_height.rs  block_time_height.rs  block_timestamp.rs  config.rs  contract_balances.rs  contract_state.rs  epoch_height.rs  gas.rs  lock.rs  owner_balance.rs  redeem_stake_batch.rs  redeem_stake_batch_receipt.rs  stake_account.rs  yocto_near.rs  (+7 more)
contract/src/near/: storage_keys.rs
contract/staking-pool-mock/: Cargo.toml  build.sh
contract/staking-pool-mock/src/: lib.rs
contract/tests/: account_management.rs  account_management_client.rs  contract_owner_client.rs  contract_sim_test.rs  financials_client.rs  ft_func_prefix_namespace.rs  fungible_token.rs  near.rs  near_sdk_rs_issue_262.rs  operator_client.rs  quick_test.rs  staking_pool_client.rs  staking_service_client.rs  test_utils.rs
(+11 files in other folders)
