[package]
name = "oysterpack-near-stake-token"
version = "0.1.0"
authors = ["OysterPack Inc <oysterpack.inc@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "2.0.0"
primitive-types = "0.7.3"
deflate = "0.8.6"
blake2 = "0.9.1"

[dev-dependencies]
serde_json = "1.0.59"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[workspace]
members = []
