[package]
name = "oysterpack-near-stake-token"
version = "0.1.0"
authors = ["OysterPack Inc <oysterpack.inc@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs",  tag = "2.4.0" }
uint = { version = "0.9.0", default-features = false }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
near-vm-logic = "^2.2.0"

near-sdk-sim = { git = "https://github.com/near/near-sdk-rs",  tag = "2.4.0" }

staking-pool-mock = {path="staking-pool-mock"}

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[workspace]
members = ["staking-pool-mock", "ft-transfer-receiver-mock"]
