[package]
name = "staking-pool-mock"
version = "0.1.0"
authors = ["OysterPack Inc <oysterpack.inc@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs",  tag = "3.0.0" }
primitive-types = "^0.7.3"

[dev-dependencies]
near-vm-logic = "^2.2.0"
